--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,13 @@
+# ayep
 TWITTER_API_KEY=L7APhitrdCZS6BfEz3dQ3hzlp
 TWITTER_API_SECRET=AgYqeV2ggmhzd0uDIRzecfrzJRSDmrB62sQyD9CKy1KjzuSLhK
 TWITTER_BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAAMKMMwEAAAAA6tL1q1vYkXSPfsgDIZM95fHDpeQ%3D4igkALcu31wrmKZxt351YV6bKToHD6UlMtJYwp3A3PPWfciLHW
 TWITTER_ACCESS_TOKEN=1124229865480155137-6UFfVgVh8ZjqQhC8W7KFvKoXnEvpSy
 TWITTER_ACCESS_TOKEN_SCRET=T8gSF8gFYqri2buuhBVCFK1fMWgD2gkAC02rivqqvaRcs
+TWITTER_SEARCH_TYPE=30day
+TWITTER_SEARCH_LABEL=devLah.json
+
+# amy
+# TWITTER_API_KEY=UJHCQoYLcOxSw9zNodl50XVVv
+# TWITTER_API_SECRET=xHgtbVHGMX55gvQCfDn0RD4dFxswicupkZ5Yv8DWAJo2lcNdqd
+# TWITTER_BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAABwFNAEAAAAASIwjn7%2B3bu%2F9iw%2Fhg4WoLSFRdbQ%3DuAIyfvTYZAtbZnpZEdYPRlumgbXHDK9TFNugPvvfM9RaJjd9pz%3D4igkALcu31wrmKZxt351YV6bKToHD6UlMtJYwp3A3PPWfciLHW
