--- a/package.json
+++ b/package.json
@@ -28,8 +28,12 @@
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.5.1",
     "apollo-server-express": "^2.21.0",
+    "btoa": "^1.2.1",
+    "date-fns": "^2.17.0",
+    "fsp": "^0.1.2",
     "graphql": "^15.5.0",
     "graphql-tools": "^7.0.4",
+    "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -40,6 +44,7 @@
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
+    "@types/date-fns": "^2.6.0",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
